--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "hammerjs": "^2.0.8",
     "lodash": "^4.17.4",
     "rxjs": "^5.0.1",
+    "taxee-tax-statistics": "^2017.1.1",
     "ts-helpers": "^1.1.1",
     "zone.js": "^0.7.2"
   },
@@ -46,6 +47,7 @@
     "karma-remap-istanbul": "^0.2.1",
     "node-sass": "^4.2.0",
     "protractor": "~4.0.13",
+    "taxee-tax-statistics": "^2017.1.1",
     "ts-node": "1.2.1",
     "tslint": "^4.0.2",
     "typescript": "~2.0.3"
