--- a/src/tsconfig.json
+++ b/src/tsconfig.json
@@ -12,10 +12,13 @@
     "sourceMap": true,
     "target": "es5",
     "typeRoots": [
-      "../node_modules/@types"
+      "../node_modules/@types",
+      "types"
     ],
     "types": [
-      "hammerjs"
+      "hammerjs",
+      "taxee-tax-statistics",
     ]
   }
 }
+
