--- a/src/tsconfig.json
+++ b/src/tsconfig.json
@@ -12,11 +12,10 @@
     "sourceMap": true,
     "target": "es5",
     "typeRoots": [
-      "../node_modules/@types",
+      "../node_modules/@types"
     ],
     "types": [
-      "hammerjs",
-      "taxee-tax-statistics",
+      "hammerjs"
     ]
   }
 }
