--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "lodash": "^4.17.4",
     "moment": "^2.17.1",
     "ng2-bootstrap": "^1.3.0",
+    "ng2-money-mask": "^0.2.4",
     "rxjs": "^5.0.1",
     "taxee-tax-statistics": "^2017.1.1",
     "ts-helpers": "^1.1.1",
