--- a/package.json
+++ b/package.json
@@ -28,7 +28,9 @@
     "lodash": "^4.17.4",
     "moment": "^2.17.1",
     "ng2-bootstrap": "^1.3.0",
+    "ng2-currency-mask": "^1.1.1",
     "ng2-money-mask": "^0.2.4",
+    "ng2-validation": "^3.1.3",
     "rxjs": "^5.0.1",
     "taxee-tax-statistics": "^2017.1.1",
     "ts-helpers": "^1.1.1",
